--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.6.0",
+    "react-instagram-login": "^1.4.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
